--- a/VirtualTouristApp/Base.lproj/LaunchScreen.storyboard
+++ b/VirtualTouristApp/Base.lproj/LaunchScreen.storyboard
@@ -18,17 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="0P5-IZ-op4">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="sQE-VR-omA">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="137" id="6Ea-de-iH0"/>
-                                    <constraint firstAttribute="width" constant="257" id="v1L-gB-x6a"/>
+                                    <constraint firstAttribute="width" constant="240" id="fjx-Yx-YMS"/>
+                                    <constraint firstAttribute="height" constant="128" id="hNU-JB-RmY"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.95686274509803915" green="0.59607843137254901" blue="0.094117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="0P5-IZ-op4" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="WUJ-Cd-5U0"/>
-                            <constraint firstItem="0P5-IZ-op4" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ctx-Y9-iMz"/>
+                            <constraint firstItem="sQE-VR-omA" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cXI-bW-Wo3"/>
+                            <constraint firstItem="sQE-VR-omA" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="o64-6t-4cy"/>
                         </constraints>
                     </view>
                 </viewController>
